[tool.coverage.run]
command_line = "-m pytest tests"
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.select = [
    "E",  # Pyflakes
    "F",  # pycodestyle
    "I",  # isort
]
src = ["src", "tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
